<resources>
    <string name="app_name">HW03</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="logout">Logout</string>
    <string name="genres">Genres</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
</resources>